--- a/Restaurant.html
+++ b/Restaurant.html
@@ -1,4 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Restaurant Menu</title>
+  <style>
+    body {
+      background-image: url('https://wallpapers.com/images/hd/restaurant-background-2ez77umko2vj5w02.jpg');
+      background-size: cover;
+      font-family: Arial, sans-serif;
+    }
+   p{
+    text-align: left;
+    font-family: 'Courier New', Courier;
+    font-size: 30px;
+   }
+ 
 
 
     table {
